Complete pizza recipe page
Completed pizza recipe page, added ingredients and
steps. that is all.

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,8 +11,28 @@
         </div>
         <div>
             <img src="/images/pizza.jpg" alt="image of a margherita pizza">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae soluta quidem eaque.</p>
+            <h4>Description</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae soluta quidem eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti. Hic autem aperiam nemo debitis.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam aut, vitae quasi quas facere sint officia dolorum ducimus ipsam debitis! Corrupti qui optio cupiditate velit!</p>
+        </div>
+        <div>
+            <h4>ingredients</h4>
+            <ul>
+                <li>Pizza crust</li>
+                <li>pizza sauce</li>
+                <li>peps</li>
+                <li>cheese</li>
+                <li>chicken</li>
+                <li>ham</li>
+            </ul>
+            <h4>steps</h4>
+            <ol>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias libero incidunt nostrum. Officia placeat illum rerum voluptatum tempora quam temporibus.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis iusto eius aut consequatur optio rerum mollitia iste ex!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam nostrum, aliquam quos accusantium ea.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci rerum cum eaque accusamus quos neque consectetur tempora, dolorum iure incidunt perferendis atque commodi.</li>
+                <li>Enjoy!</li>
+            </ol>
         </div>
     </div>
 </body>
