Restructure pizza html file Restructured the html structure of pizza recipe  html file to match those of the other recipes  html files.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,15 +9,14 @@
         <div class="heading">
             <h1>Lasagna</h1>
         </div>
-            <div class="images">
-                <img src="/images/lasagna.jpg" alt="image of a delicious, homemade cut of lasagna">
-            </div>
-            <div class="content">
-                <h3>Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia inventore, excepturi reprehenderit iusto temporibus nisi eos autem eaque praesentium repellendus optio laboriosam perspiciatis! Rem, aliquid.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut asperiores b\eatae, distinctio molestiae rerum ullam.</p>
-                <div class="ingredients">
-                    <h4>Ingredients</h4>
+        <div class="description">
+            <img src="/images/lasagna.jpg" alt="image of a delicious, homemade cut of lasagna">
+            <h3>Description</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia inventore, excepturi reprehenderit iusto temporibus nisi eos autem eaque praesentium repellendus optio laboriosam perspiciatis! Rem, aliquid.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut asperiores b\eatae, distinctio molestiae rerum ullam.</p>
+        </div>
+        <div class="ingredients">
+            <h4>Ingredients</h4>
                     <ul>
                         <li>Pasta</li>
                         <li>Tomato sauce</li>
@@ -28,8 +27,6 @@
                         <li>Parmesan Cheese</li>
                         <li>Bread crumbs</li>
                     </ul>
-                </div>
-                <div class="steps">
                     <h4>Steps</h4>
                     <ol>
                         <li>Step one- Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aliquam culpa nihil deserunt voluptate aliquid ea voluptatem debitis excepturi vel.</li>
@@ -38,8 +35,8 @@
                         <li>Step 4 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, laudantium.</li>
                         <li>Step 5 - Serve!</li>
                     </ol>
-                </div>
-            </div>
+                
+        </div>
     </div>
     
 </body>
