Add home button and links between recipe pages
I added a Home button to recipe pages and added
links between the recipe pages so they all link
together and back to the index page.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="heading-sub">
         <h2>Recipes</h2>
         <div>
-            <a href="/recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
+            <ul>
+                <li><a href="/recipes/lasagna.html" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">Lasagna</a></li>
+                <li><a href="/recipes/pizza.html" target="_blank" rel="noopener" style="text-decoration: none;">Pizza</a></li>
+                <li><a href="/recipes/blueberrygalette.html" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">Blueberry gallete</a></li>
+            </ul>
         </div>
     </div>
 </body>
