--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -37,6 +37,14 @@
                     </ol>
                 
         </div>
+        <div>
+            <p>Our other recipes:</p>
+            <ul>
+                <li><a href="pizza.html">Margherita Pizza</a></li>
+                <li><a href="blueberrygalette.html">Lasagna</a></li>
+            </ul>
+            <button><a href="index.html"></a>Home</button>
+        </div>
     </div>
     
 </body>
