--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -34,6 +34,14 @@
                 <li>Enjoy!</li>
             </ol>
         </div>
+        <div>
+            <p>Our other recipes:</p>
+            <ul>
+                <li><a href="blueberrygalette.html">Margherita Pizza</a></li>
+                <li><a href="lasagna.html">Lasagna</a></li>
+            </ul>
+            <button><a href="index.html"></a>Home</button>
+        </div>
     </div>
 </body>
 </html>
