--- a/recipes/blueberrygalette.html
+++ b/recipes/blueberrygalette.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <div>
+        <div style="text-align: center;">
             <h1>Blueberry Galette</h1>
         </div>
         <div>
@@ -32,6 +32,14 @@
                 <li>Lorem ipsum dolor sit amet.</li>
                 <li>Enjoy</li>
             </ol>
+        </div>
+        <div>
+            <p>Our other recipes:</p>
+            <ul>
+                <li><a href="pizza.html">Margherita Pizza</a></li>
+                <li><a href="lasagna.html">Lasagna</a></li>
+            </ul>
+            <button><a href="index.html"></a>Home</button>
         </div>
     </div>
 </body>
