Center h1 header on pizza and lasagna pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <div>
-        <div class="heading">
+        <div style="text-align: center;">
             <h1>Lasagna</h1>
         </div>
-        <div class="description">
+        <div>
             <img src="/images/lasagna.jpg" alt="image of a delicious, homemade cut of lasagna">
             <h3>Description</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia inventore, excepturi reprehenderit iusto temporibus nisi eos autem eaque praesentium repellendus optio laboriosam perspiciatis! Rem, aliquid.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut asperiores b\eatae, distinctio molestiae rerum ullam.</p>
         </div>
-        <div class="ingredients">
+        <div>
             <h4>Ingredients</h4>
                     <ul>
                         <li>Pasta</li>
