--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <div>
+        <div style="text-align: center;">
             <h1>Pizza</h1>
         </div>
         <div>
