--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <div class="heading-main">
+    <div class="heading-main" style="text-align: center;">
         <h1>Odin Recipes</h1>
     </div>
     <div class="heading-sub">
