--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Recipes</h2>
         <div>
             <ul>
-                <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">Lasagna</a></li>
+                <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" style="text-decoration: none;"><li>Lasagna</li></a>
                 <li><a href="recipes/pizza.html" target="_blank" rel="noopener" style="text-decoration: none;">Pizza</a></li>
                 <li><a href="recipes/blueberrygalette.html" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">Blueberry gallete</a></li>
             </ul>
