Should fix images not loading Add .. to beginning of file paths on all the image sources. Hopefully this fixes the issue.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
             <h1>Lasagna</h1>
         </div>
         <div>
-            <img src="/images/lasagna.jpg" alt="image of a delicious, homemade cut of lasagna">
+            <img src="../images/lasagna.jpg" alt="image of a delicious, homemade cut of lasagna">
             <h3>Description</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia inventore, excepturi reprehenderit iusto temporibus nisi eos autem eaque praesentium repellendus optio laboriosam perspiciatis! Rem, aliquid.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut asperiores b\eatae, distinctio molestiae rerum ullam.</p>
