--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,7 +10,7 @@
             <h1>Pizza</h1>
         </div>
         <div>
-            <img src="/images/pizza.jpg" alt="image of a margherita pizza">
+            <img src="../images/pizza.jpg" alt="image of a margherita pizza">
             <h4>Description</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae soluta quidem eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti. Hic autem aperiam nemo debitis.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam aut, vitae quasi quas facere sint officia dolorum ducimus ipsam debitis! Corrupti qui optio cupiditate velit!</p>
