--- a/recipes/blueberrygalette.html
+++ b/recipes/blueberrygalette.html
@@ -10,7 +10,7 @@
             <h1>Blueberry Galette</h1>
         </div>
         <div>
-            <img src="/images/blueberrygallete.jpg" alt="image of a blueberry gallete">
+            <img src="../images/blueberrygallete.jpg" alt="image of a blueberry gallete">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aut dolore dolorem culpa dicta reiciendis.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugit, molestias vel assumenda maiores nihil. Delectus autem sunt unde odio!</p>
         </div>
