Remove button tags on recipe pages
I removed all button tags on the home anchors
 in the three recipe pages.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -42,7 +42,7 @@
                 <li><a href="pizza.html">Margherita Pizza</a></li>
                 <li><a href="blueberrygalette.html">Lasagna</a></li>
             </ul>
-            <button><a href="index.html"></a>Home</button>
+            <a href="index.html">Home</a>
         </div>
     </div>
     
