--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -40,7 +40,7 @@
                 <li><a href="blueberrygalette.html">Margherita Pizza</a></li>
                 <li><a href="lasagna.html">Lasagna</a></li>
             </ul>
-            <button><a href="index.html"></a>Home</button>
+            <a href="index.html">Home</a>
         </div>
     </div>
 </body>
