--- a/recipes/blueberrygalette.html
+++ b/recipes/blueberrygalette.html
@@ -39,7 +39,7 @@
                 <li><a href="pizza.html">Margherita Pizza</a></li>
                 <li><a href="lasagna.html">Lasagna</a></li>
             </ul>
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
         </div>
     </div>
 </body>
