--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -42,7 +42,7 @@
                 <li><a href="pizza.html">Margherita Pizza</a></li>
                 <li><a href="blueberrygalette.html">Lasagna</a></li>
             </ul>
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
         </div>
     </div>
     
