Edit link names and pizza page heading

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -40,7 +40,7 @@
             <p>Our other recipes:</p>
             <ul>
                 <li><a href="pizza.html">Margherita Pizza</a></li>
-                <li><a href="blueberrygalette.html">Lasagna</a></li>
+                <li><a href="blueberrygalette.html">Blueberry Gallete</a></li>
             </ul>
             <a href="../index.html">Home</a>
         </div>
