--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <div style="text-align: center;">
-            <h1>Pizza</h1>
+            <h1>Margherita Pizza</h1>
         </div>
         <div>
             <img src="../images/pizza.jpg" alt="image of a margherita pizza">
@@ -37,7 +37,7 @@
         <div>
             <p>Our other recipes:</p>
             <ul>
-                <li><a href="blueberrygalette.html">Margherita Pizza</a></li>
+                <li><a href="blueberrygalette.html">Blueberry Gallete</a></li>
                 <li><a href="lasagna.html">Lasagna</a></li>
             </ul>
             <a href="../index.html">Home</a>
